--- a/internal/tscode/base.tmpl
+++ b/internal/tscode/base.tmpl
@@ -268,6 +268,21 @@ implements {{useImport "Ent"}}<{{$viewerType}}>
     ) as {{$dataType}}[];
   }
 
+  static async loadCustomCount<T extends {{$baseClass}}>(
+    this: {{$thisType}},
+    query: {{useImport "CustomQuery"}},
+    context?: {{useImport "Context"}}
+  ): Promise<number> {
+  // TODO
+    return {{useImport "loadCustomData"}}(
+      {
+        ...{{$baseClass}}.loaderOptions.apply(this),
+      },
+      query,
+      context,
+    );
+  }
+
   static async loadRawData<T extends {{$baseClass}}>(
     this: {{$thisType}},
     id: ID,
