--- a/ts/Dockerfile.tmpl
+++ b/ts/Dockerfile.tmpl
@@ -18,7 +18,8 @@ ARG TARGETOS TARGETARCH
 RUN  GOOS=$TARGETOS GOARCH=$TARGETARCH go install -ldflags="-X 'github.com/lolopinto/ent/internal/build_info.DockerVersion=$DOCKER_TAG' -X 'github.com/lolopinto/ent/internal/build_info.Time=$(date)'" github.com/lolopinto/ent/tsent@$GOLANG_VERSION
 
 # get and install auto_schema
-FROM --platform=$BUILDPLATFORM python:3.8.11-buster AS python-image
+# psycopg2 error when buildplatform is used...
+FROM python:3.8.11-buster AS python-image
 ARG AUTO_SCHEMA_VERSION
 RUN python -m venv /opt/venv
 # Make sure we use the virtualenv
