--- a/internal/tscode/ent_query_base.tmpl
+++ b/internal/tscode/ent_query_base.tmpl
@@ -34,30 +34,6 @@
 
   {{end -}}
 
-  {{range $edge := .IndexedEdges -}}
-    {{$node := useImport $edge.GetNodeInfo.Node -}}
-    {{$fNodeData := $schema.GetNodeDataForNode $node}}
-    {{$schema := $fNodeData.GetSchemaConst -}}
-      export const {{$edge.GetCountFactoryName}} = new {{useImport "RawCountLoaderFactory"}}({
-        ...{{$node}}.loaderOptions(),
-        groupCol: {{$edge.QuotedDBColName}},
-        {{ if $fNodeData.TransformsSelect -}}
-          {{ reserveDefaultImport $fNodeData.GetSchemaPath $schema -}}
-          clause: {{useImport "getTransformedReadClause"}}({{useImport $schema}}),
-        {{ end -}}
-      });
-      export const {{$edge.GetDataFactoryName}} = new {{useImport "IndexLoaderFactory"}}(
-        {{$node}}.loaderOptions(),
-        {{$edge.QuotedDBColName}},
-        {
-          toPrime: [{{useImport (printf "%sLoader" $edge.GetNodeInfo.NodeInstance)}}],
-          {{ if $fNodeData.TransformsSelect -}}
-            extraClause: {{useImport "getTransformedReadClause"}}({{useImport $schema}}),
-          {{ end -}}
-        }
-      );
-  {{end -}}
-
   {{range $edge := .AssocEdges}}
     {{$name := printf "%sBase" $edge.TsEdgeQueryName -}}
     {{ reserveImport $importPath $edge.TsEdgeQueryEdgeName -}}
@@ -151,9 +127,9 @@
         super(viewer, {
           src: src, 
     {{ end -}}
-          countLoaderFactory: {{$edge.GetCountFactoryName}},
-          dataLoaderFactory: {{$edge.GetDataFactoryName}},
-          options:{{$node}}.loaderOptions(), 
+          groupCol: {{$edge.QuotedDBColName}},
+          loadEntOptions: {{$node}}.loaderOptions(),
+          name: "{{$edge.TsEdgeQueryName}}",
         });
       }
 
