--- a/internal/tscode/custom_interface.tmpl
+++ b/internal/tscode/custom_interface.tmpl
@@ -21,12 +21,8 @@
       {{ end -}}
         return {
           {{range $field := .Fields -}}
-            {{ if or $field.HasSubFields $field.IsUnionType -}}
-              {{ if $field.Nullable -}}
-                {{$field.TsFieldName $cfg}}: input.{{$field.GetDbColName}} === null ? null :{{$field.GetConvertMethod}}(input.{{$field.GetDbColName}}),
-              {{ else -}}
-                {{$field.TsFieldName $cfg}}: {{$field.GetConvertMethod}}(input.{{$field.GetDbColName}}),
-              {{end -}}
+            {{ if or ($field.HasSubFields $cfg) ($field.IsUnionType $cfg) -}}
+              {{$field.TsFieldName $cfg}}: {{$field.GetConvertMethod $cfg}}(input.{{$field.GetDbColName}}),
             {{else -}}
               {{$field.TsFieldName $cfg}}: input.{{$field.GetDbColName}},
             {{end -}}
@@ -34,13 +30,25 @@
         };
       }
 
+      {{ if .Exported -}}
+        export function {{.GetConvertNullableMethod}}(input: any): {{.TSType}} | null {
+      {{ else -}}
+        function {{.GetConvertNullableMethod}}(input: any): {{.TSType}} | null {
+      {{ end -}}
+        if (input === undefined || input === null) {
+          return null;
+        }
+        return {{.GetConvertMethod}}(input);
+        }
+
+
       {{ if .GenerateListConvert}}
         export function {{.GetConvertListMethod}}(input: any[]): {{.TSType}}[] {
           return input.map(v => {{.GetConvertMethod}}(v));
         }
 
         export function {{.GetConvertNullableListMethod}}(input: any[] | null): {{.TSType}}[] | null {
-          if (input === null) {
+          if (input === null || input === undefined) {
             return null;
           }
           return input.map(v => {{.GetConvertMethod}}(v));
@@ -62,6 +70,13 @@
       {{ else -}}
         throw new Error('invalid input for {{.TSType}}`);
       {{ end -}}
+    }
+
+    function {{$info.NullableMethod}}(input: any): {{.TSType}} | null {
+      if (input === null || input === undefined) {
+        return null;
+      }
+      return {{$info.Method}}(input);
     }
   {{ end -}}
 {{ end -}}
