--- a/internal/tscode/base.tmpl
+++ b/internal/tscode/base.tmpl
@@ -22,7 +22,7 @@
   {{ end }}
 {{ end -}}
 
-{{ range .GetImportsForBaseFile $schema -}} 
+{{ range .GetImportsForBaseFile $schema $cfg -}} 
   {{ reserveImportPath . false -}}
 {{ end}}
 
