--- a/internal/tscode/custom_interface.tmpl
+++ b/internal/tscode/custom_interface.tmpl
@@ -59,17 +59,19 @@
   {{ end }}
   {{ if .IsCustomUnion -}}
     {{ .GetTypeDeclaration }}
-    {{$info := .GetConvertMethodInfo }}
+    {{$info := .GetConvertMethodInfo $cfg }}
     function {{$info.Method}}(input: any): {{.TSType}} {
       {{range $info.Infos -}} 
-        if (input.{{.Field}} !== undefined) {
-          return {{.ReturnFunction}}(input);
-        }
+        {{if .HasConvertFunction -}}
+          if (input.{{.Field}} !== undefined) {
+            return {{.ReturnFunction}}(input);
+          }
+        {{ end -}}
       {{ end -}}
       {{ if $info.Default -}}
         return {{$info.Default}}(input);
       {{ else -}}
-        throw new Error('invalid input for {{.TSType}}`);
+        return input;
       {{ end -}}
     }
 
