Remove unnecessary converts (#1159)

--- a/internal/tscode/custom_interface.tmpl
+++ b/internal/tscode/custom_interface.tmpl
@@ -3,6 +3,7 @@
 {{ $ci := .Interface}}
 {{ $pkg := .Package }}
 {{ $cfg := .Config }}
+{{ $schema := .Schema }}
 {{ range $ci.GetAllEnums -}}
   {{/* TODO when imported here? */}}
   {{if not .Imported -}}
@@ -21,7 +22,7 @@
       {{ end -}}
         return {
           {{range $field := .Fields -}}
-            {{ if or ($field.HasSubFields $cfg) ($field.IsUnionType $cfg) -}}
+            {{ if $field.HasConvertFunction $cfg $schema -}}
               {{$field.TsFieldName $cfg}}: {{$field.GetConvertMethod $cfg}}(input.{{$field.GetDbColName}}),
             {{else -}}
               {{$field.TsFieldName $cfg}}: input.{{$field.GetDbColName}},
@@ -58,17 +59,19 @@
   {{ end }}
   {{ if .IsCustomUnion -}}
     {{ .GetTypeDeclaration }}
-    {{$info := .GetConvertMethodInfo }}
+    {{$info := .GetConvertMethodInfo $cfg }}
     function {{$info.Method}}(input: any): {{.TSType}} {
       {{range $info.Infos -}} 
-        if (input.{{.Field}} !== undefined) {
-          return {{.ReturnFunction}}(input);
-        }
+        {{if .HasConvertFunction -}}
+          if (input.{{.Field}} !== undefined) {
+            return {{.ReturnFunction}}(input);
+          }
+        {{ end -}}
       {{ end -}}
       {{ if $info.Default -}}
         return {{$info.Default}}(input);
       {{ else -}}
-        throw new Error('invalid input for {{.TSType}}`);
+        return input;
       {{ end -}}
     }
 
