support global augmentation

--- a/internal/tscode/internal.tmpl
+++ b/internal/tscode/internal.tmpl
@@ -1,3 +1,7 @@
+{{ if .GlobalImportPath -}}
+  {{reserveImportPath .GlobalImportPath false }}
+{{ end -}}
+
 {{range .SortedLines -}}
   {{exportAll .}}
 {{end -}}
