fix import path in entquery for edges from patterns
also fix import path for node to be `src/ent/internal` instead of `src/ent`

--- a/internal/tscode/assoc_ent_query.tmpl
+++ b/internal/tscode/assoc_ent_query.tmpl
@@ -15,7 +15,7 @@ export abstract class {{$name}} extends {{useImport $base}} {
 export class {{$name}} extends {{useImport $base}} {
 {{ end -}}
   {{if .Edge.GenerateSourceLoadEntOptions -}}
-  {{reserveImport .Package.ExternalImportPath .SourceNode -}}
+  {{reserveImport .Package.InternalImportPath .SourceNode -}}
     getSourceLoadEntOptions() {
       return {{useImport .SourceNode}}.loaderOptions();
     }
