--- a/internal/tscode/loaders.tmpl
+++ b/internal/tscode/loaders.tmpl
@@ -1,4 +1,4 @@
-{{reserveImport "./const" "NodeType" }}
+{{reserveImport "./types" "NodeType" }}
 {{ reserveImport .Package.PackagePath "ObjectLoaderFactory" }}
 {{ reserveImport .Package.SchemaPackagePath "getObjectLoaderProperties"}}
 
