--- a/internal/tscode/mixin_builder.tmpl
+++ b/internal/tscode/mixin_builder.tmpl
@@ -4,7 +4,7 @@
 {{$p := .Pattern}}
 {{ $cfg := .Config -}}
 
-{{ reserveImport "src/ent/generated/const" "EdgeType" "NodeType" }}
+{{ reserveImport "src/ent/generated/types" "EdgeType" "NodeType" }}
 
 {{$viewerInfo := $cfg.GetTemplatizedViewer -}}
 {{ reserveImportPath $viewerInfo.GetImportPath false -}}
