--- a/internal/schema/enum/enum.tmpl
+++ b/internal/schema/enum/enum.tmpl
@@ -27,4 +27,11 @@ export enum {{.Name}} {
     return {{$enumName}}.{{$conv.UnknownKey}}
     }
   }
+
+  export function {{$conv.NullableName}}(val: {{$conv.ConvertFuncTSType}} | null): {{$enumName}} | null {
+    if (val === null) {
+      return null;
+    } 
+    return {{$conv.Name}}(val);
+  }
 {{end -}}
